# lunchpad

./: .eslintrc  .gitignore  .npmrc  .parcelrc  Lunchpad.csproj  Program.cs  README.md  Startup.cs  WeatherForecast.cs  electron.manifest.json  index.html  license.md  linux.md  nx.json  package-lock.json  package.json  readme.md  style.md  sysex.md  tailwind.config.js  tsconfig.json  version.js  version.json  vite.config.ts  workspace.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
ClientApp/: package-lock.json  package.json
ClientApp/public/: index.html  manifest.json
Controllers/: WeatherForecastController.cs
Pages/: Error.cshtml.cs  _ViewImports.cshtml
Properties/: launchSettings.json
apps/application/: .eslintrc  jest.config.js  tsconfig.app.json  tsconfig.json
apps/frontend/: .babelrc  jest.config.js  tsconfig.app.json  tsconfig.json
apps/lunchpad-electron/: jest.config.js  tsconfig.app.json
apps/lunchpad-frontend-e2e/: cypress.json
libs/base/: README.md  jest.config.js  tsconfig.json
libs/contexts/: README.md  jest.config.js  tsconfig.json
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: LaunchpadType.ts
src-tauri/src/: color.rs  configuration.rs  main.rs  midi.rs  state.rs
src-tauri/src/launchpad/: legacy.rs  mark2.rs  mark3.rs  mod.rs
src-tauri/src/launchpads/: legacy.rs  mark2.rs  mark3.rs  mod.rs
src-tauri/src/midi/: commands.rs  error.rs  mod.rs  structs.rs
src-web/: app.tsx  index.html  main.tsx
types/: lunchpad.d.ts  window.require.d.ts
(+410 files in other folders)
