[package]
name = "lunchpad"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.11"
serde_json = "1.0"
async-std = "1.12.0"
midir = { version = "0.9.1" }
thiserror = "1.0.56"
ts-rs = "7.1.1"
app_dirs2 = "2.5.5"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
